--- a/Js drum kit/index.html
+++ b/Js drum kit/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="stylesheet"
-      href="style-personal.css"
+      href="style.css"
     />
     <link
       rel="icon"
